--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
   "devDependencies": {
     "@changesets/changelog-github": "0.4.8",
     "@changesets/cli": "2.26.1",
+    "@graphql-tools/code-file-loader": "7.3.21",
+    "@graphql-tools/graphql-file-loader": "7.5.16",
+    "@graphql-tools/load": "7.8.13",
     "@theguild/eslint-config": "0.8.0",
     "@theguild/prettier-config": "1.1.2",
     "@types/body-parser": "1.19.2",
